[tool.poetry]
name = "exchange-rate"
version = "0.1.0"
description = ""
authors = ["Andrii Kylymnyk <a.kylymnyk@gmail.com>"]
readme = "README.md"
packages = [{include = "exchange-rate"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"